# bazel-mongodb-memory-server

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  index.test.ts  index.ts  package.json  tsconfig.json
